Fix profile image position on safari

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ body {
 #card {
   width: 500px;
   max-width: 90%;
+  position: relative;
   display: inline-block;
   vertical-align: middle;
   background: rgba(255,255,255,0.9);
